# iron-track

./: .buildinfo  .dockerignore  .env.docker.dev.template  .env.docker.template  .env.local  .env.local.template  .env.testing  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  changelog.html  cli.py  contribution-guide.html  docker-compose.override.yaml  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: ci.yaml  dependabot-uv-lock.yaml  docs.yaml  release.yaml
_modules/: functools.html  index.html  typing.html
_modules/app/: main.html
_modules/app/config/: base.html
_modules/app/lib/: auth.html  cache_key_builders.html  coders.html  crypt.html  deps.html  exceptions.html  filters.html  handlers.html  invalidate_cache.html  json_response.html  jwt_utils.html  pretty_regex_error_msgs.html  schema.html  serializers.html
_modules/app/scripts/: seeder.html
_modules/app/server/: core.html  lifespan.html
_modules/concurrent/futures/: thread.html
_modules/pwdlib/: _hash.html
_modules/sqlalchemy/ext/: associationproxy.html
_modules/sqlalchemy/orm/: attributes.html  properties.html
_modules/sqlalchemy/sql/: schema.html
_sources/: changelog.rst.txt  index.rst.txt
_sources/api/: index.rst.txt
_sources/api/config/: app_settings.rst.txt  base.rst.txt  constants.rst.txt
_sources/api/db/: exercise.rst.txt  index.rst.txt  reference.rst.txt  user.rst.txt
_sources/api/domain/: index.rst.txt
_sources/api/lib/: auth.rst.txt  cache_key_builders.rst.txt  crypt.rst.txt  deps.rst.txt  exceptions.rst.txt  filters.rst.txt  index.rst.txt  json_response.rst.txt  jwt_utils.rst.txt  schema.rst.txt  serializers.rst.txt
_sources/api/scripts/: index.rst.txt  seeder.rst.txt
_sources/api/server/: core.rst.txt  lifespan.rst.txt
_sources/api/utils/: server_cli.rst.txt
_sources/usage/: development.rst.txt  installation.rst.txt
api/: index.html  main.html
api/config/: app_settings.html  base.html  constants.html  index.html
api/db/: base.html  exercise.html  index.html  reference.html  role.html  user.html
api/domain/: index.html
api/domain/catalogs/: deps.html  filters.html  index.html  schemas.html  services.html
api/domain/exercises/: controllers.html  deps.html  filters.html  index.html  schemas.html  services.html
api/domain/system/: controllers.html  index.html  schemas.html
api/domain/users/: auth.html  deps.html  filters.html  index.html  jwt_helpers.html  schemas.html  services.html  utils.html
api/lib/: auth.html  cache_key_builders.html  coders.html  crypt.html  deps.html  exceptions.html  filters.html  handlers.html  index.html  invalidate_cache.html  json_response.html  jwt_utils.html  pretty_regex_error_msgs.html  schema.html  serializers.html
api/scripts/: commands.html  index.html  seeder.html
api/server/: core.html  index.html  lifespan.html
api/utils/: index.html  server_cli.html
api/utils/log_utils/: handlers.html  index.html  middleware.html  setup.html
benchmarks/: BENCHMARKS.md  SETUP.md  SPEC.md  auth-serialization.md
benchmarks/ext/auth-serialization/: serialization.py
benchmarks/scripts/: signup.lua
benchmarks/scripts/auth-serialization/: login.lua  signup.lua
benchmarks/scripts/common/: run-bench-automated.sh  run-granian.sh  run-uvicorn.sh  run-wrk2-sar.sh
deploy/: docker-compose.infra.yaml
deploy/angie/: Dockerfile  entrypoint.sh
deploy/angie/snippets/: optimization.conf  proxy_params.conf  security.conf
deploy/angie/templates/: angie.conf.template  default.conf.template
deploy/app/dev/: Dockerfile
deploy/app/run/: Dockerfile
deploy/pgbouncer/: Dockerfile  entrypoint.sh
deploy/pgbouncer/conf/: pgbouncer.ini.template  userlist.txt
deploy/postgres/: Dockerfile
deploy/postgres/conf/: pg_hba.conf  postgresql.conf
deploy/postgres/init/: init-user-db.sh
dev/adr/: 001-performance.md  01_adr_auth-serialization.md  adr_template.md  stack-rationale-rus.md  stack-rationale.md
docs/: changelog.rst  conf.py  index.rst
docs/api/: index.rst  main.rst
docs/api/config/: app_settings.rst  base.rst  index.rst
docs/api/db/: base.rst  index.rst  role.rst  user.rst
docs/api/domain/: index.rst
docs/api/lib/: auth.rst  coders.rst  crypt.rst  deps.rst  handlers.rst  index.rst  invalidate_cache.rst  json_response.rst  jwt_utils.rst  pretty_regex_error_msgs.rst  serializers.rst
docs/api/scripts/: commands.rst
docs/api/server/: index.rst
docs/api/utils/: index.rst
docs/usage/: cli-guide.rst  development.rst  index.rst  installation.rst
fastapi-app/: cli.py  main.py
fastapi-app/certs/: README.md
fastapi-app/config/: base.py
fastapi-app/db/alembic/: alembic.ini  env.py
fastapi-app/domain/users/: jwt_helpers.py  oauth2.py
fastapi-app/scripts/: commands.py
fastapi-app/server/: core.py
fastapi-app/utils/log_utils/: handlers.py  middleware.py  setup.py
resources/exercises/3_4_Sit-Up/: exercise.json
resources/exercises/90_90_Hamstring/: exercise.json
resources/exercises/Ab_Crunch_Machine/: exercise.json
resources/exercises/Ab_Roller/: exercise.json
resources/exercises/Adductor/: exercise.json
resources/exercises/Adductor_Groin/: exercise.json
src/: main.py
src/app/: __about__.py  main.py
src/config/: app_settings.py  base.py  constants.py
src/lib/: auth.py  cache_key_builders.py  coders.py  crypt.py  exceptions.py  handlers.py  invalidate_cache.py  json_response.py  jwt_utils.py  oauth2.py  pretty_regex_error_msgs.py
src/scripts/: commands.py  generate_exercise_fixtures.py
src/server/: core.py
tests/: conftest.py  constants.py  data_fixtures.py  db_utils.py  helpers.py  test_placeholder.py
tests/fixtures/: equipment.json  exercises.json
tests/integration/: conftest.py
usage/: cli-guide.html  development.html  index.html  installation.html
(+1186 files in other folders)
