[project]
authors = [{ name = "Alex Matveev", email = "alex.matveev.dev@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "advanced-alchemy[uuid]>=1.8.0",
    "anyio>=4.12.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "email-validator>=2.3.0",
    "fastapi>=0.123.5",
    "fastapi-cache2>=0.2.2",
    "fastapi-cli>=0.0.16",
    "httptools>=0.7.1",
    "msgspec>=0.20.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.22.1",
]
description = "FastAPI web application for tracking workouts"
keywords = ["fastapi", "sqlalchemy", "alembic", "api", "asgi", "workouts", "tracking"]
license = { text = "MIT" }
name = "irontrack"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.urls]
Repository = "https://github.com/bizoxe/iron-track"
Documentation = "https://github.com/bizoxe/iron-track/docs"

[dependency-groups]
dev = [{ include-group = "linting" }, { include-group = "test" }, { include-group = "docs" }]
linting = [
    "pre-commit>=4.5.0",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "types-click",
]
test = [
    "pytest",
    "pytest-sugar",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "pytest-databases[postgres,redis]>=0.15.0",
    "httpx",
    "pytest-mock",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinx-design",
    "sphinx-click",
    "sphinxcontrib-mermaid",
    "shibuya",
]

[tool.uv]
default-groups = ["dev", "linting", "test", "docs"]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--ignore", "src/db/alembic"
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/db/alembic/versions/*.py",
    "src/scripts/*",
]
fix = true
line-length = 120
indent-width = 4
lint.fixable = ["ALL"]
lint.ignore = [
    "SIM117",  # multiple-with-statements
    "COM812",  # missing-trailing-comma
    "D100",    # pydocstyle - missing docstring in public module
    "D101",    # pydocstyle - missing docstring in public class
    "D102",    # pydocstyle - missing docstring in public method
    "D103",    # pydocstyle - missing docstring in public function
    "D104",    # pydocstyle - missing docstring in public package
    "D105",    # pydocstyle - missing docstring in magic method
    "D106",    # pydocstyle - missing docstring in public nested class
    "D107",    # pydocstyle - missing docstring in __init__
    "S106",    # hardcoded-password-func-arg
    "ANN401",  # any-type
    "ARG001",  # unused-function-argument
    "PT022",   # pytest-useless-yield-fixture
    "S101",    # checks for uses of the assert keyword
]
lint.select = ["ALL"]
lint.extend-select = ["I"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = '''(?x)(
    ^.venv/
  | ^src/db/alembic/
  | ^src/scripts/
)'''
implicit_reexport = false
plugins = [
  "pydantic.mypy"
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "src.lib.coders.*",
    "src.lib.json_response.*",
    "src.lib.jwt_utils.*"
]
warn_return_any = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["tests.*"]