[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Alex Matveev", email = "alex.matveev.dev@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "advanced-alchemy[uuid]>=1.8.0",
    "anyio>=4.12.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "email-validator>=2.3.0",
    "fastapi>=0.123.5",
    "fastapi-cache2>=0.2.2",
    "fastapi-cli>=0.0.16",
    "granian>=2.6.0",
    "msgspec>=0.20.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]
description = "IronTrack: A high-performance, asynchronous API for workout tracking."
keywords = [
    "fastapi",
    "advanced-alchemy",
    "sqlalchemy",
    "alembic",
    "granian",
    "pgbouncer",
    "postgresql",
    "redis",
    "workout-tracker",
    "fitness-api"
]
license = { text = "MIT" }
name = "irontrack"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.urls]
Repository = "https://github.com/bizoxe/iron-track"
Documentation = "https://github.com/bizoxe/iron-track/docs"

[project.scripts]
app = "app.main:run_cli"

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.38.0",
    { include-group = "linting" },
    { include-group = "test" },
    { include-group = "docs" }
]
linting = [
    "pre-commit>=4.5.0",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "types-click",
]
test = [
    "pytest",
    "pytest-sugar",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "pytest-databases[postgres,redis]>=0.15.0",
    "httpx",
    "pytest-mock",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinx-design",
    "sphinx-click",
    "sphinxcontrib-mermaid",
    "shibuya",
    "autodoc_pydantic",
    "sphinxcontrib-typer",
]

[tool.hatch.build]
dev-mode-dirs = ["src", "."]
ignore-vcs = true
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "docs"]
include = ["src", "tests", "LICENSE"]
skip-excluded-dirs = false

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
default-groups = ["dev", "linting", "test", "docs"]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = [
    "tests/*",
    "src/app/__about__.py",
    "src/app/db/alembic/*",
    "src/app/main.py",
    "src/app/scripts/*",
    "src/app/utils/server_cli.py",
    "src/app/db/models/base.py",
    "src/app/domain/*/urls.py",
    "src/app/utils/log_utils/setup.py",
    "**/__init__.py",
    "src/app/config/*",
]

[tool.coverage.report]
omit = ["*/tests/*"]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    "raise NotImplementedError",
    "def __repr__",
    "raise AssertionError",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--ignore", "src/app/db/alembic"
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/app/db/alembic/versions/*.py",
]
fix = true
line-length = 120
indent-width = 4
lint.fixable = ["ALL"]
lint.ignore = [
    "SIM117",  # multiple-with-statements
    "COM812",  # missing-trailing-comma
    "D100",    # pydocstyle - missing docstring in public module
    "D101",    # pydocstyle - missing docstring in public class
    "D102",    # pydocstyle - missing docstring in public method
    "D103",    # pydocstyle - missing docstring in public function
    "D104",    # pydocstyle - missing docstring in public package
    "D105",    # pydocstyle - missing docstring in magic method
    "D106",    # pydocstyle - missing docstring in public nested class
    "D107",    # pydocstyle - missing docstring in __init__
    "S106",    # hardcoded-password-func-arg
    "ANN401",  # any-type
    "ARG001",  # unused-function-argument
    "PT022",   # pytest-useless-yield-fixture
    "S101",    # checks for uses of the assert keyword
]
lint.select = ["ALL"]
lint.extend-select = ["I"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests/"]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.isort]
known-first-party = ["tests", "app"]

[tool.ruff.lint.per-file-ignores]
"src/app/scripts/commands.py" = ["FBT001", "PLC0415", "FBT002", "RSE102"]
"docs/conf.py" = ["PLR0913", "FBT001", "A001", "INP001"]
"src/app/config/base.py" = ["PLC0415"]
"src/app/main.py" = ["PLC0415"]
"tests/data_fixtures.py" = ["PLC0415"]
"tests/*" = ["PLR0913", "FBT001"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
mypy_path = "src"
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
    '^src/app/db/alembic/',
    '^\.venv/',
]
implicit_reexport = false
plugins = [
    "pydantic.mypy"
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.lib.coders.*",
    "app.lib.json_response.*",
    "app.lib.jwt_utils.*"
]
warn_return_any = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = [
    "tests.*",
    "app.utils.server_cli.*"
]

[tool.codespell]
ignore-words-list = "selectin,selectinload,Flyes,Delt,Te"

[tool.bumpversion]
current_version = "0.1.0"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -
        (?P<pre_l>[a-zA-Z-]+)
        (?P<pre_n>0|[1-9]\\d*)
    )?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
tag = true
tag_name = "v{new_version}"
commit = true
message = "bump: version {current_version} → {new_version}"

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/app/__about__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.git-cliff.changelog]
header = """
Changelog
=========

All notable changes to this project will be documented in this file.
"""
body = """
{% if version %}
`Release [v{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }} <https://github.com/bizoxe/iron-track/releases/tag/v{{ version | trim_start_matches(pat="v") }}>`_
-----------------------------------------------------------------------------------------------------------------------

* `See All commits in v{{ version | trim_start_matches(pat="v") }} <https://github.com/bizoxe/iron-track/commits/v{{ version | trim_start_matches(pat="v") }}>`_
{% else %}
[Unreleased]
------------
{% endif %}
{% for group, commits in commits | group_by(attribute="group") %}
{{ group | upper_first }}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{% for commit in commits %}
* (`{{ commit.id | truncate(length=7, end="") }} <https://github.com/bizoxe/iron-track/commit/{{ commit.id }}>`_) \
{% if commit.breaking %}[**breaking**] {% endif %}- {{ commit.message | upper_first }} ({{ commit.author.name }})
{% endfor %}
{% endfor %}
"""
footer = """
IronTrack Changelog
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = ".*!", group = "💥 Breaking Changes" },
  { message = "^feat", group = "🚀 Features" },
  { message = "^fix", group = "🐛 Bug Fixes" },
  { message = "^doc", group = "📚 Documentation" },
  { message = "^perf", group = "⚡ Performance" },
  { message = "^refactor", group = "🛠️ Refactor" },
  { message = "^style", group = "🎨 Styling" },
  { message = "^test", group = "🧪 Testing" },
  { message = "^chore\\(release\\): prepare for", skip = true },
  { message = "^chore", group = "⚙️ Miscellaneous Tasks" },
  { body = ".*security", group = "🛡️ Security" },
]
tag_pattern = "v[0-9]*"
sort_commits = "newest"
filter_commits = true
